lỗi UI khi merge code :)

--- a/submission/index.html
+++ b/submission/index.html
@@ -6,7 +6,9 @@
 
     <style>
       /* Actor Detail*/
-
+      body {
+        background: none;
+      }
       .actor-container {
         margin: auto;
         padding: 20px;
